fix: improve security configuration, authentication flow, and admin dashboard integration